TASK-11: Add de/en localisation

--- a/resources/mails/password-reset.html
+++ b/resources/mails/password-reset.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head">
-    <title>JiraRush - установить новый пароль</title>
+    <title th:text="#{JIRA_RUSH_SET_NEW_EMAIL}"></title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
-<p th:text="'Привет, ' + ${user.firstName} + '.'"/>
-<p th:text="'Мы получили запрос на установку нового пароля JiraRush для учетной записи: ' + ${user.email} + '.'"/>
-<a th:href="${resetUrl}">Установить пароль</a>
+<p th:text="#{WELCOME_USER_MESSAGE(${user.firstName})}"/>
+<p th:text="#{WE_GET_NEW_PASSWORD_REQUEST(${user.email})}"/>
+<a th:href="${resetUrl}" th:text="#{SET_PASSWORD}"></a>
 </body>
 </html>
